Fix formatting of cassio and datasets in requirements

--- a/requirements.txt
+++ b/requirements.txt
@@ -8,7 +8,8 @@ astrapy
 langchain-openai
 langchain-astradb
 langchain-graph-retriever
-cassio datasets 
+cassio 
+datasets 
 tiktoken 
 langchain-huggingface 
 sentence-transformers 
